--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,34 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Petal & Wick flowers and candles online shop",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ArlCIbe/newPetalAndWick.git"
+  },
+  "keywords": [
+    "petal",
+    "wick",
+    "roses",
+    "online",
+    "shop"
+  ],
+  "author": "HQ, Lynsey, Arlindo, and Cris",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ArlCIbe/newPetalAndWick/issues"
+  },
+  "homepage": "https://github.com/ArlCIbe/newPetalAndWick#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mogoose": "^0.0.1-security",
-    "mongoose": "^8.3.5"
+    "mongoose": "^8.4.0"
   }
 }
